--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tailwindcss' prefix(tw);
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -112,9 +112,18 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply tw:border-border tw:outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply tw:bg-background tw:text-foreground;
+  }
+}
+
+@layer base {
+  * {
+    @apply tw:border-border tw:outline-ring/50;
+  }
+  body {
+    @apply tw:bg-background tw:text-foreground;
   }
 }
